--- a/templates/admin.html
+++ b/templates/admin.html
@@ -273,7 +273,7 @@
 							<h4 class="title">
 							  <span class="text"><strong>Insert</strong>Stock Form</span>
 							</h4>
-						<form action="{{ url_for ('insertstock') }}" method="post" align="center" enctype="multipart/form-data">
+						<form action="{{ url_for ('insertstock') }}" method="GET" align="center" enctype="multipart/form-data">
 							  <input type="hidden" value="/" />
 							  <fieldset>
 								<div class="controls">
