--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Bootstrap E-commerce Templates</title>
+    <title>Skate Shopping</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <script src="{{ url_for ('static', filename='js/index.js') }}"></script>
